2010-06-25  John W. Eaton  <jwe@octave.org>

	* graphics.cc (reset_default_properties): New static function.
	(root_figure::reset_default_properties,
	figure::reset_default_properties, axes::reset_default_properties):
	Use it to avoid duplicated code.

2010-06-24  Rik <octave@nomad.inbox5.com>

        * octave.cc: Add [FILE] to octave usage string (bug #30258).

2010-06-23  David Bateman  <dbateman@free.fr>

	* graphics.cc (void root_figure::reset_default_properties (void),
	void figure::reset_default_properties (void),
	void figure::reset_default_properties (void),
	Freset): New functions.
	* graphics.h.in (void graphics_object:reset_default_properies (void),
	virtual void base_graphics_object:reset_default_properies (void)):
	New functions.
	(void root_figure::reset_default_properties (void),
	void figure::reset_default_properties (void),
	void figure::reset_default_properties (void)): Declarations.
	(std::string color_property::values_as_string (void) const,
	Cell color_property::values_as_cell (void) const): New functions.

2010-06-21  Rik <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/dlmread.cc: Fix spreadsheet style range option.
        (bug #30183).

2010-06-21  David Bateman  <dbateman@free.fr>

	* graphics.cc (std::string radio_values:values_as_string (void)
	const, Cell radio_values:values_as_cell (void) const): New functions.
	(void graphics_object::set (const octave_value_list&)): Throw error
	with no arguments.
	(std::string base_graphics_object::values_as_string (void),
	Octave_map base_graphics_object::values_as_struct (void)): New
	functions.
	(Fset): Allow single handle as an argument and return the radio
	values.
	* graphics.h.in (virtual bool base_property::is_radio (void) const,
	virtual std::string base_property::values_as_string (void) const,
	virtual Cell base_property::values_as_cell (void) const):
	New function.
	(std::string radio_values::values_as_string (void) const,
	Cell radio_values::values_as_cell (void) const): Declaration.